# TrendStarBooks

./: README.md
client/: nuxt.config.ts  package.json
client/src/: app.vue
client/src/layouts/: default.vue
client/src/pages/: about.vue  index.vue
client/src/server/plugins/: extend-html.ts
server/: .gitignore  .project  CMakeLists.txt  CMakePresets.json  Makefile  pom.xml
server/.profile/: eclipse-java-google-style.xml
server/src/: main.c
server/src/include/: http_client.h  utils.h
server/src/libs/: utils.h
server/src/main/java/com/trendstarbooks/: App.java
server/src/model/: model.c  model.h
server/src/test/java/com/trendstarbooks/: AppTest.java
server/tests/: 01_create_account.c  02_authentication.c  client.c
